# jsp

./: .editorconfig  .flake8  .gitflow  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_STRUCTURE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  TODO.md  dev-requirements.txt  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.dev/: README.md  links.txt
.dev/project-1/: analyze_nextjs_data.py  analyze_tile_similarity.py  analyze_tile_sources.py  analyze_tile_urls.py  analyze_tiles.py  capture_openseadragon_state.py  check_webpage_images.py  create_tile_grid_preview.py  debug_extraction.py  debug_jsp_structure.py  debug_transcription_selenium.py  detect_image_layers.py  download_dzi_simple.py  download_high_res_tiles.py  download_jsp_images.py  download_jsp_images_v2.py  download_openseadragon_all_levels.py  download_openseadragon_images.py  extract_jsp_content.py  extract_jsp_content_sections.py  extract_jsp_content_v2.py  extract_jsp_transcription.py  extract_jsp_transcription_static.py  extract_jsp_transcription_v2.py  find_dzi_url.py  inspect_openseadragon_html.py  inspect_transcription_page.py  map_tiles_to_images.py  separate_overlapping_images.py  stitch_tiles.py  stitch_tiles_smart.py  stitch_tiles_v2.py  test_details_extraction.py  view_logs.py  visualize_tile_grid.py
.dev/project-2/: download_jsp_images.py
.github/workflows/: ci.yml  publish.yml
docs/: PUBLISHING.md  README.md
docs/architecture/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  SCRAPER_ARCHITECTURE.md
docs/examples/: cli_usage.md
docs/implementation/: progress_indicators.md
docs/planning/: CONTENT_SCRAPER_PLAN.md  SCRAPING_TODO.md  TODO.md
docs/reference/: jsp_website_patterns.md
prompts/feat/scrape-content/: implement_content_extractor.md
scripts/: publish.py
src/: __init__.py  cli.py  config.py  document_info_extractor.py  downloader.py  footnotes_extractor.py  historical_intro_extractor.py  image_metadata.py  markdown_generator.py  metadata_extractor.py  models.py  openseadragon.py  output_utils.py  progress_utils.py  scraper.py  source_note_extractor.py  stitcher.py  table_extractor.py  tile_manager.py  title_extractor.py  transcription_extractor.py  transcription_extractor_browser.py  utils.py
tests/: __init__.py  test_downloader.py  test_openseadragon.py  test_scraper.py  test_stitcher.py  test_tile_manager.py  test_utils.py
